@@ -1,5 +1,0 @@
-SAPCAR (older version was called CAR) is a compress utility (similar to
-winzip, tar, zip, gz, etc.) , that is used by SAP to compress and decompress
-nearly all delivered files and executables.
-
-For more information see http://www.easymarketplace.de/SAPCAR.php
