@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2009/03/09 16:52:05 sno Exp $
-bin/SAPCAR
