@@ -1,38 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2009/03/09 16:52:05 sno Exp $
-
-SHA1 (sap/aix-powerpc/SAPCAR_0-10003699.exe) = 085b2afb620fa5f5d6f053f06634ac907c7b605c
-RMD160 (sap/aix-powerpc/SAPCAR_0-10003699.exe) = ac47bd76d3fc736edaa730225cd94908902a1968
-Size (sap/aix-powerpc/SAPCAR_0-10003699.exe) = 6296599 bytes
-SHA1 (sap/hpux-ia64/SAPCAR_0-10003682.exe) = 28d457b4c0199b6e79ea512dd1e75574cfd508d4
-RMD160 (sap/hpux-ia64/SAPCAR_0-10003682.exe) = e7b68253c798bc9fbc0e25d792979ae953e6f38f
-Size (sap/hpux-ia64/SAPCAR_0-10003682.exe) = 8550456 bytes
-SHA1 (sap/hpux-hppa/SAPCAR_0-10003683.exe) = 9d5082f00c0d38b5dd39e37891d21f369e591f8a
-RMD160 (sap/hpux-hppa/SAPCAR_0-10003683.exe) = 7e599fac92c3eeeabc9b1e682977b5bff683641d
-Size (sap/hpux-hppa/SAPCAR_0-10003683.exe) = 4918672 bytes
-SHA1 (sap/linux-i386/SAPCAR_0-10003688.exe) = c419b55a927ca1da754371cd6e643ff6156b1dd2
-RMD160 (sap/linux-i386/SAPCAR_0-10003688.exe) = a75254bc25fd82ac057648c41d5d6c71cfc88054
-Size (sap/linux-i386/SAPCAR_0-10003688.exe) = 3123694 bytes
-SHA1 (sap/linux-ia64/SAPCAR_0-10003689.exe) = 67f38e4b09ee0304ec98b56e8eeb4bcc503640eb
-RMD160 (sap/linux-ia64/SAPCAR_0-10003689.exe) = b1a0b61cbfaf3b0151c6b3041589bede25abb39e
-Size (sap/linux-ia64/SAPCAR_0-10003689.exe) = 4340708 bytes
-SHA1 (sap/linux-powerpc64/SAPCAR_0-10003687.exe) = 364e47dfbf048e00e7f211e02216e81394b442ea
-RMD160 (sap/linux-powerpc64/SAPCAR_0-10003687.exe) = b85d42db18745aa8bdacbbba6e436fefc6ef226b
-Size (sap/linux-powerpc64/SAPCAR_0-10003687.exe) = 3704841 bytes
-SHA1 (sap/linux-x86_64/SAPCAR_0-10003690.exe) = c4bc6f603c017205c38080a76b69b5c13932d733
-RMD160 (sap/linux-x86_64/SAPCAR_0-10003690.exe) = 55fa64b517706ebedd12e2491a38b64952bec11c
-Size (sap/linux-x86_64/SAPCAR_0-10003690.exe) = 3299869 bytes
-SHA1 (sap/solaris-sparc/SAPCAR_0-10003702.exe) = 423e12ca5ccd7dea4397992b84567ea6e1e79264
-RMD160 (sap/solaris-sparc/SAPCAR_0-10003702.exe) = 0b7deceac68476851fc34bb1ae0b68c7b3565e69
-Size (sap/solaris-sparc/SAPCAR_0-10003702.exe) = 4212136 bytes
-SHA1 (sap/solaris-x86_64/SAPCAR_0-10003701.exe) = 6d223d735f829aaeac1813e7697786a1b3c5e3f6
-RMD160 (sap/solaris-x86_64/SAPCAR_0-10003701.exe) = 6d4ecb52e9705fb0bcae2c0681e3aaf4e1542513
-Size (sap/solaris-x86_64/SAPCAR_0-10003701.exe) = 4211184 bytes
-SHA1 (sap/windows-i586/SAPCAR_0-10003694.exe) = e6b0e2edb8ec4e3ef3f8a2580a0c669c9d8f5957
-RMD160 (sap/windows-i586/SAPCAR_0-10003694.exe) = 957643ebad79ca01115133fcd96f20a21eb6ef6e
-Size (sap/windows-i586/SAPCAR_0-10003694.exe) = 2736128 bytes
-SHA1 (sap/windows-ia64/SAPCAR_0-10003695.exe) = fa78eab022f67d8c8c1be792d54b1a366a98645f
-RMD160 (sap/windows-ia64/SAPCAR_0-10003695.exe) = 0fc90d27fe6116592ba62d6bcb57a4af183174db
-Size (sap/windows-ia64/SAPCAR_0-10003695.exe) = 4934144 bytes
-SHA1 (sap/windows-x86_64/SAPCAR_0-10003696.exe) = 47e4156d8a7ac092ce306222062f2bffa7b6d30c
-RMD160 (sap/windows-x86_64/SAPCAR_0-10003696.exe) = c37dbc713c4061ca81889686414e404cbcd004eb
-Size (sap/windows-x86_64/SAPCAR_0-10003696.exe) = 3621888 bytes
