@@ -1,2 +1,0 @@
-sapnwrfc is an RFC based connector to SAP specifically designed for use with
-the next generation RFC SDK supplied by SAP for NW2004+
