@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2009/09/19 14:23:29 sno Exp $
-
-SHA1 (sapnwrfc-0.31.tar.gz) = e8a215a2ca378be1868a9191aedc60bd4d83bd98
-RMD160 (sapnwrfc-0.31.tar.gz) = 9d3eb988ac5a565b2d651afd32d1238228ba710e
-Size (sapnwrfc-0.31.tar.gz) = 42304 bytes
