@@ -1,13 +1,0 @@
-@comment $NetBSD: PLIST.common,v 1.2 2009/06/14 17:49:13 joerg Exp $
-include/sapuc.h
-include/sapdecf.h
-include/sapnwrfc.h
-include/sapucx.h
-share/examples/sapnwrfcsdk/companyClient.c
-share/examples/sapnwrfcsdk/sflightClient.c
-share/examples/sapnwrfcsdk/rfcexec.cpp
-share/examples/sapnwrfcsdk/rfcexec.h
-share/examples/sapnwrfcsdk/sapnwrfc.ini
-share/examples/sapnwrfcsdk/startrfc.h
-share/examples/sapnwrfcsdk/startrfc.cpp
-share/examples/sapnwrfcsdk/stfcDeepTableServer.c
