@@ -1,38 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2009/03/09 16:53:17 sno Exp $
-
-SHA1 (sap/aix-powerpc/NWRFC_1-20004303.SAR) = ecdac22775f1d69f6bc29aebb39afd7748d36f77
-RMD160 (sap/aix-powerpc/NWRFC_1-20004303.SAR) = 1d694f91d2bb91408d2c89700a6f56e5d4123d3d
-Size (sap/aix-powerpc/NWRFC_1-20004303.SAR) = 9286549 bytes
-SHA1 (sap/hpux-ia64/NWRFC_1-20004304.SAR) = 595127d1aef8741dca5ff36f14cec8d5a1c7f758
-RMD160 (sap/hpux-ia64/NWRFC_1-20004304.SAR) = 23eb7f3815351eaad780aa5cacc90d5c8d2c23eb
-Size (sap/hpux-ia64/NWRFC_1-20004304.SAR) = 15139092 bytes
-SHA1 (sap/hpux-hppa/NWRFC_1-20004545.SAR) = 32a1567036ad7a9ab361521e2363e6bda190b10c
-RMD160 (sap/hpux-hppa/NWRFC_1-20004545.SAR) = 62051a710afef1565d62c7e25a8d94cc5adfa185
-Size (sap/hpux-hppa/NWRFC_1-20004545.SAR) = 9418730 bytes
-SHA1 (sap/linux-i386/NWRFC_1-20004547.SAR) = 97c06723b217a159f00d1968db81a89a14c1f003
-RMD160 (sap/linux-i386/NWRFC_1-20004547.SAR) = 838369666c2da8f7595a5d637683e9fc6b54f3e7
-Size (sap/linux-i386/NWRFC_1-20004547.SAR) = 7855870 bytes
-SHA1 (sap/linux-ia64/NWRFC_1-20004548.SAR) = 1887d279fd8e3319a77158af71014466005b335f
-RMD160 (sap/linux-ia64/NWRFC_1-20004548.SAR) = d1169b87a345645832297a5c93284e3dfecf9419
-Size (sap/linux-ia64/NWRFC_1-20004548.SAR) = 10360209 bytes
-SHA1 (sap/linux-powerpc64/NWRFC_1-20004546.SAR) = 113197fc205f36a180ff158756ba039298691fd3
-RMD160 (sap/linux-powerpc64/NWRFC_1-20004546.SAR) = 4ffca4c694fea72cb291539225ed8cfe20738c54
-Size (sap/linux-powerpc64/NWRFC_1-20004546.SAR) = 9822899 bytes
-SHA1 (sap/linux-x86_64/NWRFC_1-20004549.SAR) = 9b45e3083cf2bb76ad9d08f1e7f1bab7771d16f3
-RMD160 (sap/linux-x86_64/NWRFC_1-20004549.SAR) = f12741ee566bc549bba4a135233e9f18ebb3f49c
-Size (sap/linux-x86_64/NWRFC_1-20004549.SAR) = 8201062 bytes
-SHA1 (sap/solaris-sparc/NWRFC_1-20004557.SAR) = 3ed0021626d2d5a8139110bf350c25059fb5d314
-RMD160 (sap/solaris-sparc/NWRFC_1-20004557.SAR) = a83e470af28d0f2b81e891ab30e13904c8e6200d
-Size (sap/solaris-sparc/NWRFC_1-20004557.SAR) = 8379087 bytes
-SHA1 (sap/solaris-x86_64/NWRFC_1-20004556.SAR) = 8962c90b9deb59d04009b0000042bbed9a5282fe
-RMD160 (sap/solaris-x86_64/NWRFC_1-20004556.SAR) = 358d5455fb885dd7c7a6889f8ca714f0e9dbf39e
-Size (sap/solaris-x86_64/NWRFC_1-20004556.SAR) = 7662105 bytes
-SHA1 (sap/windows-i586/NWRFC_1-20004550.SAR) = d4e951fadb4056769facab97b6268b8e6d25082d
-RMD160 (sap/windows-i586/NWRFC_1-20004550.SAR) = 187d80300af01e8f9f25fa4e6a5ad1ac8018bd84
-Size (sap/windows-i586/NWRFC_1-20004550.SAR) = 6578543 bytes
-SHA1 (sap/windows-ia64/NWRFC_1-20004551.SAR) = c5600cba54d79228a4184312b75cd48f3751da1e
-RMD160 (sap/windows-ia64/NWRFC_1-20004551.SAR) = a7c596727a078ce88c3c2d973454a48a144c1fff
-Size (sap/windows-ia64/NWRFC_1-20004551.SAR) = 8654474 bytes
-SHA1 (sap/windows-x86_64/NWRFC_1-20004552.SAR) = dcff903a2ba41f89bbc3ac8c0874185cbdf6b21e
-RMD160 (sap/windows-x86_64/NWRFC_1-20004552.SAR) = 0994a8001f592857c2e97f048b94396f374ea168
-Size (sap/windows-x86_64/NWRFC_1-20004552.SAR) = 6945147 bytes
