@@ -1,36 +1,0 @@
-# $NetBSD: Makefile.common,v 1.2 2009/09/23 13:49:40 tnn Exp $
-# used by archivers/sapcar/Makefile
-# used by devel/sapnwrfcsdk/Makefile
-
-EMUL_PLATFORMS?=	linux-x86_64 linux-i386 linux-powerpc64 linux-ia64 \
-			aix-powerpc hpux-ia64 hpux-hppa solaris-x86_64 \
-			solaris-sparc windows-x86_64 windows-i586 \
-			windows-ia64
-
-.include "../../mk/bsd.prefs.mk"
-
-.if ${EMUL_PLATFORM} == "none"
-SAP_OPSYS=		${LOWER_OPSYS}
-SAP_ARCH=		${MACHINE_ARCH}
-.else
-SAP_OPSYS=		${EMUL_OPSYS}
-SAP_ARCH=		${EMUL_ARCH}
-.endif
-
-MASTER_SITES?=		# empty
-DIST_SUBDIR?=		sap/${SAP_OPSYS}-${SAP_ARCH}
-EXTRACT_SUFX?=		.SAR
-
-HOMEPAGE?=		http://www.sap.com/
-
-WRKSRC?=		${WRKDIR}
-BUILD_DIRS=		# empty
-
-NO_CONFIGURE=		yes
-NO_BUILD=		yes
-
-INTERACTIVE_STAGE=	fetch
-FETCH_MESSAGE=							\
-	"Distfiles cannot be downloaded automatically."		\
-	"Please see the file DESCR for instructions on how"	\
-	"to fetch the distfiles for ${PKGNAME}."
