@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.630 2013/02/17 10:21:30 wiz Exp $
+$NetBSD: CHANGES-2013,v 1.631 2013/02/17 10:29:01 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -916,3 +916,6 @@ Changes to the packages collection and infrastructure in 2013:
 	Removed devel/ruby-i18n_05 [taca 2013-02-17]
 	Removed www/ruby-erubis26 [taca 2013-02-17]
 	Updated net/p5-Net-GitHub to 0.50 [wiz 2013-02-17]
+	Removed archivers/sapcar [wiz 2013-02-17]
+	Removed devel/sapnwrfcsdk [wiz 2013-02-17]
+	Removed devel/p5-sapnwrfc [wiz 2013-02-17]
